# Ai

.github/workflows/: classic-benchmark-ci.yml
autogpt_platform/autogpt_libs/: pyproject.toml
autogpt_platform/backend/: pyproject.toml
autogpt_platform/backend/backend/server/routers/: v1.py
autogpt_platform/backend/backend/util/: settings.py
autogpt_platform/frontend/: package.json
autogpt_platform/frontend/src/components/integrations/: credentials-input.tsx  credentials-provider.tsx
autogpt_platform/frontend/src/components/ui/: icons.tsx
autogpt_platform/frontend/src/lib/autogpt-server-api/: types.ts
autogpt_platform/market/: pyproject.toml
