[tool.poetry]
name = "autogpt-platform-backend"
version = "0.1.0"
description = "A platform for building AI-powered agentic workflows"
authors = ["AutoGPT <info@agpt.co>"]
readme = "README.md"
packages = [{ include = "backend" }]


[tool.poetry.dependencies]
python = "^3.10"
aio-pika = "^9.5.4"
anthropic = "^0.43.1"
apscheduler = "^3.11.0"
autogpt-libs = { path = "../autogpt_libs", develop = true }
click = "^8.1.8"
croniter = "^5.0.1"
discord-py = "^2.4.0"
fastapi = "^0.115.6"
feedparser = "^6.0.11"
flake8 = "^7.0.0"
google-api-python-client = "^2.159.0"
google-auth-oauthlib = "^1.2.1"
groq = "^0.15.0"
jinja2 = "^3.1.5"
jsonref = "^1.1.0"
jsonschema = "^4.22.0"
ollama = "^0.4.6"
openai = "^1.59.8"
praw = "~7.8.1"
prisma = "^0.15.0"
psutil = "^6.1.1"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
pyro5 = "^5.15"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
python-dotenv = "^1.0.1"
redis = "^5.2.1"
sentry-sdk = "2.20.0"
supabase = "^2.11.0"
tenacity = "^9.0.0"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
websockets = "^13.1"
youtube-transcript-api = "^0.6.2"
googlemaps = "^4.10.0"
replicate = "^1.0.4"
pinecone = "^5.4.2"
cryptography = "^43.0.3"
[tool.poetry.group.dev.dependencies]
poethepoet = "^0.30.0"
httpx = "^0.27.0"
pytest-watcher = "^0.4.2"
requests = "^2.32.3"
ruff = "^0.7.3"
pyright = "^1.1.388"
isort = "^5.13.2"
black = "^24.10.0"
aiohappyeyeballs = "^2.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "backend.app:main"
rest = "backend.rest:main"
ws = "backend.ws:main"
executor = "backend.exec:main"
cli = "backend.cli:main"
format = "linter:format"
lint = "linter:lint"
test = "run_tests:test"

[tool.pytest-watcher]
now = false
clear = true
delay = 0.2
runner = "pytest"
runner_args = []
patterns = ["*.py"]
ignore_patterns = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
